<resources>
    <string name="app_name">LifeCycle</string>
    <string name="dialog_txt">Diag Click</string>
    <string name="normal_txt">Normal Click</string>
    <string name="life_et_txt">Please input a Name</string>
    <string name="diatv">Show Diag</string>
    <string name="normal_bt1_txt">ProgressBar Click</string>
    <string name="normal_bar2_txt">Download</string>
    <string name="normal_et1_txt">Please input hello</string>
    <string name="test_txt1">Button1</string>
    <string name="test_txt2">Button2</string>
    <string name="test_txt3">Button3</string>
    <string name="test_txt4">Button4</string>
    <string name="test_input">Please input </string>

    <color name="clr_normal">#FFFFFF</color>
    <color name="clr_pressed">#99E5FE</color>
</resources>
