<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.jiangxiujie.lifecycle.NormalActivity">

    <TextView
        android:id="@+id/normal_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/normal_et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/normal_et1_txt"
        />

<!--    <ImageView
        android:id="@+id/normal_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_2" />-->
    <ProgressBar
        android:id="@+id/normal_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
        />
    <Button
        android:id="@+id/normal_bt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal_bt1_txt"
        />
    <Button
        android:id="@+id/normal_bt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal_bar2_txt"
        />

</LinearLayout>
