<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jiangxiujie.lifecycle.LifeCycleActivity">

    <include layout="@layout/custom_ui_layout" />

    <Button
        android:id="@+id/dialog_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_txt" />

    <Button
        android:id="@+id/normal_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal_txt" />

    <Button
        android:id="@+id/test_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Linear Test" />

    <Button
        android:id="@+id/relative_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Relative Test" />

    <Button
        android:id="@+id/percent_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PercentFrame Test" />

    <Button
        android:id="@+id/cust_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Custom UI" />

    <EditText
        android:id="@+id/life_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/life_et_txt"
        android:maxLines="2" />

    <ImageView
        android:id="@+id/life_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_1" />

</LinearLayout>
